--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-WTF==0.14.2
 folium==0.10.1
 geographiclib==1.50
 geopy==1.20.0
+gunicorn==20.0.4
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
